--- a/.github/workflows/update_submodule.yml
+++ b/.github/workflows/update_submodule.yml
@@ -27,8 +27,13 @@ jobs:
         with:
           python-version: '3.x'
 
-      - name: Generate README
-        run: python scripts/generate_readme.py
+      - name: Install dependencies
+        run: pip install github-copilot-sdk
+
+      - name: Generate README with AI
+        env:
+          COPILOT_TOKEN: ${{ secrets.COPILOT_TOKEN }}
+        run: python scripts/agent_readme.py
 
       - name: Check git status
         id: status
