--- a/.github/workflows/update_submodule.yml
+++ b/.github/workflows/update_submodule.yml
@@ -45,8 +45,9 @@ jobs:
         run: |
           ISSUE_TITLE="README.mdの自動更新依頼"
           ISSUE_BODY="更新された内容をもとにREADME.mdを更新して"
-          ISSUE_NUMBER=$(gh issue create --title "$ISSUE_TITLE" --body "$ISSUE_BODY" --assignee "@copilot" --repo "$GITHUB_REPOSITORY" --json number -q ".number")
-          echo "Created issue #$ISSUE_NUMBER"
+          ISSUE_URL=$(gh issue create --title "$ISSUE_TITLE" --body "$ISSUE_BODY" --assignee "@copilot" --repo "$GITHUB_REPOSITORY")
+          echo "Created issue: $ISSUE_URL"
+          ISSUE_NUMBER=$(echo "$ISSUE_URL" | grep -oE '[0-9]+$')
           echo "issue_number=$ISSUE_NUMBER" >> $GITHUB_ENV
 
       - name: Create Pull Request
