Issuesのプロンプトの変更

--- a/.github/workflows/update_submodule.yml
+++ b/.github/workflows/update_submodule.yml
@@ -43,7 +43,7 @@ jobs:
           GH_TOKEN: ${{ secrets.COPILOT_ASSIGN_PAT }}
         run: |
           ISSUE_TITLE="README.mdの自動更新依頼"
-          ISSUE_BODY="更新された内容をもとにREADME.mdを更新して"
+          ISSUE_BODY="更新された内容をもとにREADME.mdを更新して\n\n【注意】\nこのリポジトリにはサブモジュール（repository-A/）が含まれています。\nサブモジュールの内容も必ず確認し、README.mdから説明を削除しないでください。\nサブモジュールの内容は 'git submodule update --init' で取得できます。"
           ISSUE_URL=$(gh issue create --title "$ISSUE_TITLE" --body "$ISSUE_BODY" --assignee "@copilot" --repo "$GITHUB_REPOSITORY")
           echo "Created issue: $ISSUE_URL"
           ISSUE_NUMBER=$(echo "$ISSUE_URL" | grep -oE '[0-9]+$')
