--- a/.github/workflows/update_submodule.yml
+++ b/.github/workflows/update_submodule.yml
@@ -10,58 +10,69 @@ jobs:
   update_submodule:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-        with:
-          submodules: recursive
 
-      - name: Update submodule
-        run: git submodule update --remote
+      update_submodule:
+        runs-on: ubuntu-latest
+        steps:
+          - uses: actions/checkout@v4
+            with:
+              submodules: recursive
 
-      - name: Check git status
-        id: status
-        run: echo "status=$(git status -s)" >> $GITHUB_OUTPUT
+          - name: Update submodule
+            run: git submodule update --remote
 
-      - name: Commit
-        run: |
-          git config --local user.name "Github Actions"
-          git config --local user.email "action@github.com"
-          git add .
-          git status
-          git commit -m "Update submodule"
-        if: ${{ steps.status.outputs.status }}
+          - name: Check git status
+            id: status
+            run: echo "status=$(git status -s)" >> $GITHUB_OUTPUT
 
-      - name: Push
-        uses: ad-m/github-push-action@master
-        with:
-          branch: main
-          github_token: ${{ secrets.COPILOT_ASSIGN_PAT }}
-        if: ${{ steps.status.outputs.status }}
+          - name: Commit
+            run: |
+              git config --local user.name "Github Actions"
+              git config --local user.email "action@github.com"
+              git add .
+              git status
+              git commit -m "Update submodule"
+            if: ${{ steps.status.outputs.status }}
 
-      - name: Create Issue for Copilot
-        if: ${{ steps.status.outputs.status }}
-        env:
-          GH_TOKEN: ${{ secrets.COPILOT_ASSIGN_PAT }}
-          AI_MODEL: "gpt-5.2-codex"
-        run: |
-          ISSUE_TITLE="README.mdの自動更新依頼"
-          ISSUE_BODY="更新された内容をもとにREADME.mdを更新して\n\n【注意】\nこのリポジトリにはサブモジュール（repository-A/）が含まれています。\nサブモジュールの内容も必ず確認し、README.mdから説明を削除しないでください。\nサブモジュールの内容は 'git submodule update --init' で取得できます。\n\n【追加指示】\n必ずgpt-5.2-codexを使ってください。\nREADME.mdの最後に、今回利用したAIモデル名を必ず明記してください。"
-          ISSUE_URL=$(gh issue create --title "$ISSUE_TITLE" --body "$ISSUE_BODY" --assignee "@copilot" --repo "$GITHUB_REPOSITORY")
-          echo "Created issue: $ISSUE_URL"
-          ISSUE_NUMBER=$(echo "$ISSUE_URL" | grep -oE '[0-9]+$')
-          echo "issue_number=$ISSUE_NUMBER" >> $GITHUB_ENV
+          - name: Generate GitHub App Token
+            uses: tibdex/github-app-token@v2
+            id: app_token
+            with:
+              app_id: ${{ secrets.APP_ID }}
+              private_key: ${{ secrets.PRIVATE_KEY }}
 
-      - name: Create Pull Request
-        if: ${{ steps.status.outputs.status }}
-        env:
-          GH_TOKEN: ${{ secrets.COPILOT_ASSIGN_PAT }}
-        run: |
-          BRANCH_NAME="auto/readme-update-$(date +%s)"
-          git checkout -b "$BRANCH_NAME"
-          git push origin "$BRANCH_NAME"
-          # mainとの差分がある場合のみPR作成
-          if [ "$(git rev-list --count main..$BRANCH_NAME)" -gt 0 ]; then
-            PR_URL=$(gh pr create --title "README.md自動更新" --body "CopilotによるREADME.md自動更新依頼" --base main --head "$BRANCH_NAME" --repo "$GITHUB_REPOSITORY")
-            echo "Created PR: $PR_URL"
-          else
-            echo "No diff with main. PR not created."
-          fi
+          - name: Push
+            uses: ad-m/github-push-action@master
+            with:
+              branch: main
+              github_token: ${{ steps.app_token.outputs.token }}
+            if: ${{ steps.status.outputs.status }}
+
+          - name: Create Issue for Copilot
+            if: ${{ steps.status.outputs.status }}
+            env:
+              GH_TOKEN: ${{ steps.app_token.outputs.token }}
+              AI_MODEL: "gpt-5.2-codex"
+            run: |
+              ISSUE_TITLE="README.mdの自動更新依頼"
+              ISSUE_BODY="更新された内容をもとにREADME.mdを更新して\n\n【注意】\nこのリポジトリにはサブモジュール（repository-A/）が含まれています。\nサブモジュールの内容も必ず確認し、README.mdから説明を削除しないでください。\nサブモジュールの内容は 'git submodule update --init' で取得できます。\n\n【追加指示】\n必ずgpt-5.2-codexを使ってください。\nREADME.mdの最後に、今回利用したAIモデル名を必ず明記してください。"
+              ISSUE_URL=$(gh issue create --title "$ISSUE_TITLE" --body "$ISSUE_BODY" --assignee "@copilot" --repo "$GITHUB_REPOSITORY")
+              echo "Created issue: $ISSUE_URL"
+              ISSUE_NUMBER=$(echo "$ISSUE_URL" | grep -oE '[0-9]+$')
+              echo "issue_number=$ISSUE_NUMBER" >> $GITHUB_ENV
+
+          - name: Create Pull Request
+            if: ${{ steps.status.outputs.status }}
+            env:
+              GH_TOKEN: ${{ steps.app_token.outputs.token }}
+            run: |
+              BRANCH_NAME="auto/readme-update-$(date +%s)"
+              git checkout -b "$BRANCH_NAME"
+              git push origin "$BRANCH_NAME"
+              # mainとの差分がある場合のみPR作成
+              if [ "$(git rev-list --count main..$BRANCH_NAME)" -gt 0 ]; then
+                PR_URL=$(gh pr create --title "README.md自動更新" --body "CopilotによるREADME.md自動更新依頼" --base main --head "$BRANCH_NAME" --repo "$GITHUB_REPOSITORY")
+                echo "Created PR: $PR_URL"
+              else
+                echo "No diff with main. PR not created."
+              fi
