--- a/.github/workflows/update_submodule.yml
+++ b/.github/workflows/update_submodule.yml
@@ -41,11 +41,10 @@ jobs:
         if: ${{ steps.status.outputs.status }}
         env:
           GH_TOKEN: ${{ secrets.COPILOT_ASSIGN_PAT }}
-          AI_MODEL: "gpt-5.2-codex"
         run: |
           ISSUE_TITLE="README.mdの自動更新依頼"
-          ISSUE_BODY="更新された内容をもとにREADME.mdを更新して\n\n【注意】\nこのリポジトリにはサブモジュール（repository-A/）が含まれています。\nサブモジュールの内容も必ず確認し、README.mdから説明を削除しないでください。\nサブモジュールの内容は 'git submodule update --init' で取得できます。\n\n【追加指示】\n必ずgpt-5.2-codexを使ってください。\nREADME.mdの最後に、今回利用したAIモデル名を必ず明記してください。"
-          ISSUE_URL=$(gh issue create --title "$ISSUE_TITLE" --body "$ISSUE_BODY" --assignee "@copilot" --repo "$GITHUB_REPOSITORY")
+          ISSUE_BODY="更新された内容をもとにREADME.mdを更新してほしい。このリポジトリにはサブモジュール（repository-A/）が含まれています。サブモジュールの内容も必ず確認し、README.mdから説明を削除しないでください。サブモジュールの内容は 'git submodule update --init' で取得できます。【追加指示】README.mdの最後に、今回利用したAIモデル名を必ず明記してください。"
+          ISSUE_URL=$(gh issue create --title "$ISSUE_TITLE" --body "$ISSUE_BODY" --assignee "@claude" --repo "$GITHUB_REPOSITORY")
           echo "Created issue: $ISSUE_URL"
           ISSUE_NUMBER=$(echo "$ISSUE_URL" | grep -oE '[0-9]+$')
           echo "issue_number=$ISSUE_NUMBER" >> $GITHUB_ENV
@@ -60,7 +59,7 @@ jobs:
           git push origin "$BRANCH_NAME"
           # mainとの差分がある場合のみPR作成
           if [ "$(git rev-list --count main..$BRANCH_NAME)" -gt 0 ]; then
-            PR_URL=$(gh pr create --title "README.md自動更新" --body "CopilotによるREADME.md自動更新依頼" --base main --head "$BRANCH_NAME" --repo "$GITHUB_REPOSITORY")
+            PR_URL=$(gh pr create --title "README.md自動更新" --body "README.md自動更新依頼" --base main --head "$BRANCH_NAME" --repo "$GITHUB_REPOSITORY")
             echo "Created PR: $PR_URL"
           else
             echo "No diff with main. PR not created."
