--- a/.github/workflows/update_submodule.yml
+++ b/.github/workflows/update_submodule.yml
@@ -43,11 +43,10 @@ jobs:
         if: ${{ steps.status.outputs.status }}
         env:
           GH_TOKEN: ${{ secrets.COPILOT_ASSIGN_PAT }}
-          AI_MODEL: "gpt-5.2-codex"
         run: |
           ISSUE_TITLE="README.mdの自動更新依頼"
-          ISSUE_BODY="更新された内容をもとにREADME.mdを更新してほしい。【注意】このリポジトリにはサブモジュール（repository-A/）が含まれています。サブモジュールの内容も必ず確認し、README.mdから説明を削除しないでください。サブモジュールの内容は 'git submodule update --init' で取得できます。【追加指示】必ずgpt-5.2-codexを使ってください。README.mdの最後に、今回利用したAIモデル名を必ず明記してください。"
-          ISSUE_URL=$(gh issue create --title "$ISSUE_TITLE" --body "$ISSUE_BODY" --assignee "@copilot" --repo "$GITHUB_REPOSITORY")
+          ISSUE_BODY="@claude　　　\n更新された内容をもとにREADME.mdを更新してほしい。【注意】このリポジトリにはサブモジュール（repository-A/）が含まれています。サブモジュールの内容も必ず確認し、README.mdから説明を削除しないでください。サブモジュールの内容は 'git submodule update --init' で取得できます。【追加指示】README.mdの最後に、今回利用したAIモデル名を必ず明記してください。"
+          ISSUE_URL=$(gh issue create --title "$ISSUE_TITLE" --body "$ISSUE_BODY" --repo "$GITHUB_REPOSITORY")
           echo "Created issue: $ISSUE_URL"
           ISSUE_NUMBER=$(echo "$ISSUE_URL" | grep -oE '[0-9]+$')
           echo "issue_number=$ISSUE_NUMBER" >> $GITHUB_ENV
