--- a/.github/workflows/update_submodule.yml
+++ b/.github/workflows/update_submodule.yml
@@ -46,7 +46,7 @@ jobs:
         run: |
           ISSUE_TITLE="README.mdの自動更新依頼"
           ISSUE_BODY="@claude　　　\n更新された内容をもとにREADME.mdを更新してほしい。【注意】このリポジトリにはサブモジュール（repository-A/）が含まれています。サブモジュールの内容も必ず確認し、README.mdから説明を削除しないでください。サブモジュールの内容は 'git submodule update --init' で取得できます。【追加指示】README.mdの最後に、今回利用したAIモデル名を必ず明記してください。"
-          ISSUE_URL=$(gh issue create --title "$ISSUE_TITLE" --body "$ISSUE_BODY" --repo "$GITHUB_REPOSITORY")
+          ISSUE_URL=$(gh issue create --title "$ISSUE_TITLE" --body "$ISSUE_BODY" --assignee "@claude" --repo "$GITHUB_REPOSITORY")
           echo "Created issue: $ISSUE_URL"
           ISSUE_NUMBER=$(echo "$ISSUE_URL" | grep -oE '[0-9]+$')
           echo "issue_number=$ISSUE_NUMBER" >> $GITHUB_ENV
