--- a/.github/workflows/update_submodule.yml
+++ b/.github/workflows/update_submodule.yml
@@ -44,9 +44,9 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.COPILOT_ASSIGN_PAT }}
         run: |
-          ISSUE_TITLE="README.mdの自動更新依頼"
-          ISSUE_BODY="@claude　　　\n更新された内容をもとにREADME.mdを更新してほしい。【注意】このリポジトリにはサブモジュール（repository-A/）が含まれています。サブモジュールの内容も必ず確認し、README.mdから説明を削除しないでください。サブモジュールの内容は 'git submodule update --init' で取得できます。【追加指示】README.mdの最後に、今回利用したAIモデル名を必ず明記してください。"
-          ISSUE_URL=$(gh issue create --title "$ISSUE_TITLE" --body "$ISSUE_BODY" --assignee "claude" --repo "$GITHUB_REPOSITORY")
+          ISSUE_TITLE="機能定義書・シーケンス図の自動更新依頼"
+          ISSUE_BODY="サブモジュールが更新されました。更新された内容をもとに機能定義書.mdとシーケンス図.mdを更新してほしい。【注意】このリポジトリにはサブモジュール（repository-A/, repository-B/）が含まれています。サブモジュールの内容も必ず確認し、機能定義書.md・シーケンス図.mdから説明を削除しないでください。サブモジュールの内容は 'git submodule update --init --recursive' で取得できます。【追加指示】機能定義書.md・シーケンス図.mdの更新履歴セクションに、今回利用したAIモデル名を必ず明記してください。【SKILLファイル参照】.github\skills\update API specification\SKILL.mdおよび.github/skills/update sequence diagram/SKILL.mdを参照して、指定されたフォーマットに従って資料を更新してください。"
+          ISSUE_URL=$(gh issue create --title "$ISSUE_TITLE" --body "$ISSUE_BODY" --assignee "@copilot" --repo "$GITHUB_REPOSITORY")
           echo "Created issue: $ISSUE_URL"
           ISSUE_NUMBER=$(echo "$ISSUE_URL" | grep -oE '[0-9]+$')
           echo "issue_number=$ISSUE_NUMBER" >> $GITHUB_ENV
@@ -56,12 +56,12 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.COPILOT_ASSIGN_PAT }}
         run: |
-          BRANCH_NAME="auto/readme-update-$(date +%s)"
+          BRANCH_NAME="auto/docs-update-$(date +%s)"
           git checkout -b "$BRANCH_NAME"
           git push origin "$BRANCH_NAME"
           # mainとの差分がある場合のみPR作成
           if [ "$(git rev-list --count main..$BRANCH_NAME)" -gt 0 ]; then
-            PR_URL=$(gh pr create --title "README.md自動更新" --body "CopilotによるREADME.md自動更新依頼" --base main --head "$BRANCH_NAME" --repo "$GITHUB_REPOSITORY")
+            PR_URL=$(gh pr create --title "機能定義書・シーケンス図自動更新" --body "Copilotによる機能定義書.md・シーケンス図.md自動更新依頼" --base main --head "$BRANCH_NAME" --repo "$GITHUB_REPOSITORY")
             echo "Created PR: $PR_URL"
           else
             echo "No diff with main. PR not created."
